# omniflow

./: CMakeLists.txt  README.md
TestBox/: json_test.json
controllers/: ControlPanel.cc  GetImageList.cc  GetImageList.h  GetModelList.cc  GetVideoList.cc  PostImage.cc  PostImage.h
controllers/MakeNode/: All_Node.h  NodeFactory.cc  NodeFactory.h
frontend/src/api/mock/: nodes.mock.ts
frontend/src/components/flow/FlowCanvas/: FlowCanvas.tsx
frontend/src/components/flow/NodePalette/: NodePalette.tsx
frontend/src/components/modals/: RTMPStreamModal.tsx
frontend/src/models/: node.types.ts
frontend/src/utils/: constants.ts  pipelineBuilder.ts
